SQLサーバー接続のサンプルプログラムコミット

--- a/GeneralAffairsManagementProject/appsettings.json
+++ b/GeneralAffairsManagementProject/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "GeneralAffairsDb": "Server=tcp:pass-atg-sql.database.windows.net,1433;Database=paas-atg-Database;User ID=sqladmin;Password=Atgadmin@0;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  }
 }
