--- a/GeneralAffairsManagementProject/appsettings.json
+++ b/GeneralAffairsManagementProject/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ApplicationInsights": {
+    "ConnectionString": "InstrumentationKey=d28b58d1-e013-4b04-a8d4-236f4414e42d;IngestionEndpoint=https://japanwest-0.in.applicationinsights.azure.com/;LiveEndpoint=https://japanwest.livediagnostics.monitor.azure.com/;ApplicationId=6b2caefc-e07c-430f-bca9-d71c1d75c8fb"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
