--- a/GeneralAffairsManagementProject/GeneralAffairsManagementProject.csproj
+++ b/GeneralAffairsManagementProject/GeneralAffairsManagementProject.csproj
@@ -7,6 +7,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.23.0" />
 		<PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.4" />
 	</ItemGroup>
 
