文字化けとログの修正

--- a/GeneralAffairsManagementProject/appsettings.json
+++ b/GeneralAffairsManagementProject/appsettings.json
@@ -6,6 +6,12 @@
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
+    },
+    "ApplicationInsights": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft": "Warning"
+      }
     }
   },
   "AllowedHosts": "*",
